{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 7,
  "lineage": "90b5c65a-219e-f003-a3cf-a6710a9ed589",
  "resources": [
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "nile-instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-067f5c3d5a99edc80",
            "arn": "arn:aws:ec2:us-west-2:500680836548:instance/i-0112dd7feb836c72e",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "get_user_data": false,
            "iam_instance_profile": "ecsInstanceRole",
            "id": "i-0112dd7feb836c72e",
            "instance_id": "i-0112dd7feb836c72e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "key_name": "nile-keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-08bd06b3e9744bea2",
            "private_dns": "ip-172-31-9-55.us-west-2.compute.internal",
            "private_ip": "172.31.9.55",
            "public_dns": "ec2-18-237-166-51.us-west-2.compute.amazonaws.com",
            "public_ip": "18.237.166.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-west-2:500680836548:key/f7581ce8-bc71-43b0-a14b-1d307f83d95e",
                "volume_id": "vol-0fe324f343c8ae451",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "nile-test-SG"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-9bac09c6",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01b10aeabc7fa2f60"
            ]
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:500680836548:vpc/vpc-f61b628e",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-95d9cdff",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-8b2c5af3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-f61b628e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-a0d68ddb",
            "owner_id": "500680836548",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nile-alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:500680836548:loadbalancer/app/nile-alb/07a474c5543ba66b",
            "arn_suffix": "app/nile-alb/07a474c5543ba66b",
            "dns_name": "nile-alb-979450245.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-2:500680836548:loadbalancer/app/nile-alb/07a474c5543ba66b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nile-alb",
            "security_groups": [
              "sg-0d997e64ee88e2197"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-6664af1e"
              },
              {
                "subnet_id": "subnet-9bac09c6"
              }
            ],
            "subnets": [
              "subnet-6664af1e",
              "subnet-9bac09c6"
            ],
            "tags": {
              "Environment": "Dev"
            },
            "vpc_id": "vpc-f61b628e",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.lb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nile-listener2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:500680836548:listener/app/nile-alb/07a474c5543ba66b/9647c0e90de56399",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:500680836548:targetgroup/Nile-Target-Group2/1104df86d55bb352",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:500680836548:listener/app/nile-alb/07a474c5543ba66b/9647c0e90de56399",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:500680836548:loadbalancer/app/nile-alb/07a474c5543ba66b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.nile-alb",
            "aws_lb_target_group.niletargetgroup2",
            "aws_security_group.lb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "niletargetgroup2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:500680836548:targetgroup/Nile-Target-Group2/1104df86d55bb352",
            "arn_suffix": "targetgroup/Nile-Target-Group2/1104df86d55bb352",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 6,
                "interval": 5,
                "matcher": "200",
                "path": "/",
                "port": "2001",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:500680836548:targetgroup/Nile-Target-Group2/1104df86d55bb352",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Nile-Target-Group2",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-f61b628e"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:500680836548:targetgroup/Nile-Target-Group2/1104df86d55bb352-20200809121630262100000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:500680836548:targetgroup/Nile-Target-Group2/1104df86d55bb352",
            "target_id": "i-0112dd7feb836c72e"
          },
          "dependencies": [
            "aws_lb_target_group.niletargetgroup2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:500680836548:security-group/sg-0d997e64ee88e2197",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d997e64ee88e2197",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20200809121620267500000001",
            "name_prefix": "",
            "owner_id": "500680836548",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Nile-ALB-SG2"
            },
            "timeouts": null,
            "vpc_id": "vpc-f61b628e"
          }
        }
      ]
    }
  ]
}